# oct

./: CHANGELOG.md  Cargo.toml  README.md
oct/: Cargo.toml
oct-benchmarks/: Cargo.toml  LICENCE
oct-benchmarks/src/: main.rs
oct-benchmarks/src/benchmark/: mod.rs
oct-benchmarks/src/stats/: mod.rs
oct-benchmarks/src/suite/: mod.rs
oct-macros/: Cargo.toml
oct-macros/src/: impl_derive_macro.rs  lib.rs
oct-macros/src/derive_impl/: decode_enum.rs  decode_struct.rs  encode_enum.rs  encode_struct.rs  mod.rs  sized_encode_enum.rs  sized_encode_struct.rs
oct-macros/src/discriminants/: mod.rs
oct-macros/src/generic_name/: mod.rs
oct-macros/src/impls/: decode_enum.rs  decode_struct.rs  encode_enum.rs  encode_struct.rs  sized_encode_enum.rs
oct-macros/src/repr/: mod.rs
oct/src/: lib.rs
oct/src/decode/: mod.rs
oct/src/decode/decode/: mod.rs  test.rs  tests.rs
oct/src/decode/decode_borrowed/: mod.rs
oct/src/decode/input/: mod.rs  test.rs
oct/src/encode/: mod.rs
oct/src/encode/encode/: mod.rs  test.rs  tests.rs
oct/src/encode/output/: mod.rs  test.rs
oct/src/encode/sized_encode/: mod.rs  test.rs  tests.rs
oct/src/error/: bool_decode_error.rs  char_decode_error.rs  collection_decode_error.rs  collection_encode_error.rs  enum_decode_error.rs  enum_encode_error.rs  generic_decode_error.rs  generic_encode_error.rs  input_error.rs  isize_encode_error.rs  item_decode_error.rs  item_encode_error.rs  length_error.rs  mod.rs  non_zero_decode_error.rs  output_error.rs  ref_cell_encode_error.rs  string_error.rs  system_time_decode_error.rs  usize_encode_error.rs  utf8_error.rs
oct/src/prim_discriminant/: mod.rs  test.rs
oct/src/prim_repr/: mod.rs
oct/src/primitive_discriminant/: mod.rs
oct/src/slot/: mod.rs
oct/src/slot/slot/: mod.rs  test.rs  tests.rs
oct/src/string/: mod.rs
oct/src/string/string/: cmp.rs  code.rs  conv.rs  mod.rs  test.rs  tests.rs
oct/src/vec/: mod.rs
oct/src/vec/into_iter/: mod.rs  test.rs  tests.rs
oct/src/vec/vec/: cmp.rs  code.rs  conv.rs  iter.rs  mod.rs  test.rs
