# MIT License
#
# Copyright (c) 2024-2025 Gabriel Bjørnager Jensen.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name        = "oct-benchmarks"
version     = "0.16.0"
edition     = "2021"
description = "Oct benchmarks."
license     = "MIT"

authors.workspace    = true
readme.workspace     = true
repository.workspace = true

[dependencies]
oct = { path = "../oct", version = "0.16.0", features = ["proc-macro"]}

bincode  = "1.3.0"
rand     = "0.8.0"
rayon    = "1.10.0"
zerocopy = "0.8.0"

borsh = { version =  "1.5.1", features = ["derive"] }
postcard = { version = "1.0.10", features = ["use-std"] }
serde = { version = "1.0.214", features = ["derive"] }

[lints]
workspace = true
