# MIT License
#
# Copyright (c) 2024-2025 Gabriel Bjørnager Jensen.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name        = "oct-benchmarks"
edition     = "2024"
description = "Oct benchmarks."
license     = "MIT"

version.workspace    = true
authors.workspace    = true
readme.workspace     = true
repository.workspace = true

[dependencies]
oct = { path = "../oct", version = "0.21", features = ["proc-macro"]}

bincode  = "2.0"
rand     = "0.9"
rayon    = "1.10"
zerocopy = "0.8"

borsh    = { version = "1.5", features = ["derive"] }
postcard = { version = "1.1", features = ["use-std"] }
serde    = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
