# Copyright 2024-2025 Gabriel Bjørnager Jensen.
#
# This Source Code Form is subject to the terms of
# the Mozilla Public License, v. 2.0. If a copy of
# the MPL was not distributed with this file, you
# can obtain one at:
# <https://mozilla.org/MPL/2.0/>.

[package]
name          = "oct"
edition       = "2024"
rust-version  = "1.86"
description   = "Octonary transcoder."
documentation = "https://docs.rs/oct/"
homepage      = "https://crates.io/crates/oct/"
license       = "MPL-2.0"

version.workspace     = true
authors.workspace     = true
readme.workspace      = true
repository.workspace  = true
keywords.workspace    = true
categories.workspace  = true

[package.metadata.docs.rs]
all-features = true

[dependencies]
oct-macros = { path = "../oct-macros", version = "0.19", optional = true}

[features]
default = ["alloc", "proc-macro", "std"]

alloc      = []
proc-macro = ["dep:oct-macros"]
std        = ["alloc"]

f128 = []
f16  = []

[lints]
workspace = true
